consolidate audio port on robot and registration API
